	Documentation: http://www.phpvms.net/docs

 phpVMS is licenced under the following license:
   Creative Commons Attribution Non-commercial Share Alike (by-nc-sa)
   View license.txt in the root, or visit:
		http://creativecommons.org/licenses/by-nc-sa/3.0/
---

Build Changelog:


Next Build:

	* (Admin) Custom fields can now be added into PIREPS
	* (Admin) "View details" link on PIREP
	* PIREP report page reorganized, shows additional fields

Notes:
	Run the following queries for an update

	CREATE TABLE `phpvms_pirepfields` (
		`fieldid` INT NOT NULL AUTO_INCREMENT ,
		`title` VARCHAR( 25 ) NOT NULL ,
		`name` VARCHAR( 25 ) NOT NULL ,
		PRIMARY KEY ( `fieldid` )
		UNIQUE KEY `name` (`name`)
	) ENGINE = INNODB; 
	
	CREATE TABLE `phpvms_pirepvalues` (
		`id` INT NOT NULL AUTO_INCREMENT ,
		`fieldid` INT NOT NULL ,
		`pirepid` INT NOT NULL ,
		`value` VARCHAR( 50 ) NOT NULL ,
		PRIMARY KEY ( `id` ),
		FOREIGN KEY (`fieldid`) REFERENCES phpvms_pirepfields(`fieldid`) ON DELETE CASCADE,
		FOREIGN KEY (`pirepid`) REFERENCES phpvms_pireps(`pirepid`) ON DELETE CASCADE
	) ENGINE=INNODB;



Build 340 (RC-1 aka "Almost There")

  * Clean URLs implemented
  * Set Google Map type (See Notes)
  * Pilot ranks are updated on PIREP accept
  * Schedule distance properly saved/displayed
  * Schedule listing shows airport name with ICAO on default
  * Option to show Leg in schedule (See Notes)
  * "False alarm" errors in updates/changes fixes
  * Code field expanded
  * Airports/Pilots listed by hub
  * Added "Aircraft" field to schedule search options
  * Added "Distance" to schedule search
  * Added "Arrival Airport" to schedule search
  * Unnecessary AJAX removed from "File PIREP"
  * PIREP comments can be viewed by admin
  * Login error fixed
  * Pilot registration messes up ranks fixed
  * Flight hours not adding properly bug fixed
  
  Notes: (All these options go in local.config.php to change from default)
  -----
   To stop the flight leg text from showing, add:
   