@@ -155,7 +155,7 @@ class ezSQL_mysql extends ezSQLcore
 
 	function escape($str)
 	{
-		return mysql_escape_string(stripslashes($str));
+		return mysql_real_escape_string(stripslashes($str), $this->dbh);
 	}
 
 	/*
