@@ -4,20 +4,20 @@ if(!Auth::LoggedIn())
 {
 	// Show these if they haven't logged in yet
 ?>
-	<li><a href="<?=SITE_URL ?>/index.php/Login/">Login</a></li>
-	<li><a href="<?=SITE_URL ?>/index.php/Login/register">Register</a></li>
+	<li><a href="<?=SITE_URL ?>/index.php/login/">Login</a></li>
+	<li><a href="<?=SITE_URL ?>/index.php/registration">Register</a></li>
 <?php
 }
 else
 {
 	// Show these items only if they are logged in
 ?>
-	<li><a href="<?=SITE_URL ?>/index.php/PilotProfile">Pilot Center</a></li>
+	<li><a href="<?=SITE_URL ?>/index.php/profile">Pilot Center</a></li>
 	
 <?php
 }
 ?>
-<li><a href="<?=SITE_URL ?>/index.php/Pilots">Pilots</a></li>
+<li><a href="<?=SITE_URL ?>/index.php/pilots">Pilots</a></li>
 <?=$MODULE_NAV_INC;?>
 <?php//<li><a href="?page=acars">Live Map</a></li>
 ?>
@@ -31,7 +31,7 @@ if(Auth::LoggedIn())
 ?>
 
 
-<li><a href="index.php/Login/logout">Log Out</a></li>
+<li><a href="<?=SITE_URL ?>/index.php/login/logout">Log Out</a></li>
 <?php
 }
 ?>
