@@ -1,0 +1,2 @@
+<h3>Login required!</h3>
+<p>You must be logged in to access this area! <a href="<?=SITE_URL ?>/index.php/login">Click here to login</a></p>
