@@ -20,4 +20,19 @@ $(document).ready(function()
 	});
 		
 	$("#tabcontainer > ul").tabs();
+	
+	$.listen('click', '.deleteitem', function(){return false;});
+	$.listen('dblclick','.deleteitem', function(){
+		$.post($(this).attr("href"), {id: $(this).attr("id")});
+		rmvid= "#bid"+$(this).attr("id"); $(rmvid).slideUp();
+		return false;
+	});
+	
+	$.listen('click','.addbid', function(){	
+		$.post($(this).attr("href"), {id: $(this).attr("id")});
+		id = "#"+$(this).attr("id");
+		$(id).html("Added");
+		
+		return false;
+	});
 });
